[Legacy] Action DropDown Arrow Alignment Fixes

--- a/themes/suite8/css/suitep-base/tabs.scss
+++ b/themes/suite8/css/suitep-base/tabs.scss
@@ -205,7 +205,7 @@
     margin-left: 8px;
     line-height: 14px;
     position: relative;
-    bottom: 0.4em;
+    bottom: 0.2em;
   }
 
   #tab-actions > a:hover {
